[project]
name = "java-upgrade-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair",
    "annotated-types",
    "anyio",
    "attrs",
    "blinker",
    "cachetools",
    "certifi",
    "charset-normalizer",
    "click",
    "fastapi",
    "gitdb",
    "gitpython",
    "h11",
    "idna",
    "jinja2",
    "jsonschema",
    "jsonschema-specifications",
    "markupsafe",
    "narwhals",
    "numpy",
    "packaging",
    "pandas",
    "pillow",
    "protobuf",
    "pyarrow",
    "pydantic",
    "pydantic-core",
    "pydeck",
    "python-dateutil",
    "python-multipart",
    "pytz",
    "referencing",
    "requests",
    "rpds-py",
    "six",
    "smmap",
    "sniffio",
    "starlette",
    "streamlit",
    "tenacity",
    "toml",
    "tornado",
    "typing-extensions",
    "typing-inspection",
    "tzdata",
    "urllib3",
    "uvicorn"
]
